DRAFT: write tests for JavaFX